--- a/src/app/pages/alert/alert.page.html
+++ b/src/app/pages/alert/alert.page.html
@@ -1,3 +1,11 @@
 <app-header title="alert"></app-header>
 
-<ion-content> </ion-content>
+<ion-content class="ion-padding">
+  <ion-button (click)="presentAlert()" expand="block"> Click me </ion-button>
+  <ion-button (click)="presentAlertMultipleButtons()" expand="block">
+    Click me
+  </ion-button>
+  <ion-button (click)="presentAlertPrompt()" expand="block">
+    Click me
+  </ion-button>
+</ion-content>
